--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Esse é o Javascript</h1>
+    <h2>esse é o feature 1</h2>
+
     <script src="script.js"></script>
 </body> 
 </html>
